@@ -1,6 +1,6 @@
-57144f77925973be438cf445b2a47822 *DESCRIPTION
+4b84cf22ef9b518d9dce5fa7752d9039 *DESCRIPTION
 f0606d720da62d981c3fe5f3097cd888 *NAMESPACE
-c36bed0c32d29a8f4231fcee7215746b *R/db.r
+024c9440c4f04266b91cdeb63a1af36f *R/db.r
 b47ae9aa3c8ee795873776c237cf8ee4 *R/iso.r
 0dad35ac55bb83ddd34ab57ccb2efe3a *R/legacy.r
 6266fc6577e30c7c2c1ccbb4b1608669 *R/map.r
@@ -32,7 +32,7 @@ e5e971cef422bb733644791ebdc05547 *data/state.fips.rda
 5c911aec44edd98c83aca470f8fbfa77 *data/world.cities.rda
 e338da5c189460e1ec63cf396799830b *data/world2MapEnv.rda
 a46b3243710a9eb7369556ca8a9bb0cc *data/worldMapEnv.rda
-dfdeb88027cdbe264e213f0dac61801e *inst/NEWS.Rd
+b818bd52922ec259d3d4a93d472eb401 *inst/NEWS.Rd
 90e421f1285e36de5dfeb481bc611438 *inst/README_v3
 5f9fab4844ba7d6a1ad6f65e8f684355 *man/area.map.Rd
 bcd90a5871cfbca677d5e2590d308d87 *man/canada.cities.Rd
@@ -45,14 +45,14 @@ b39d593d4b02815c823f555cf8599ee5 *man/internal.Rd
 703eae24f3c9c5d409c03b132f530a58 *man/iso.expand.Rd
 bd84406a4911f08ea727c1a0e86ea214 *man/iso3166.Rd
 b26a115b2797ec918ad277ce680dcd8a *man/italy.Rd
-f99fc61b5e58fb7340e5c4553d0030c3 *man/legacy_world.Rd
-276bd49afab74c0b90a29bbf8fdc0e50 *man/map.Rd
+14acb7101174d168d25a26f1a6932d64 *man/legacy_world.Rd
+1ffff556f8f8ef6448ad4e18cc87c5af *man/map.Rd
 f44d0c508a2f2b6cbaac31597eebb5a3 *man/map.axes.Rd
 908aea312e86dc8781af88eafcc4f966 *man/map.cities.Rd
 7154c4758c1f712f926af93e5fce1c60 *man/map.scale.Rd
 28a52f9b58db4a0f743ec06b483d8700 *man/map.text.Rd
 631a40fee9c727336502266f76e644a1 *man/map.where.Rd
-42b367151050df253705fa17c2d8e1a1 *man/match.map.Rd
+4d98494b0ba2bdfebb2e9f8086bb684b *man/match.map.Rd
 a775ac2a16cfe73efc6f6865c110121b *man/nz.Rd
 dc4256b7510c06529ade1c14c58cd5c7 *man/ozone.Rd
 e368efb53ad4d9a95938eb078ca68fd8 *man/polygon.Rd
@@ -63,10 +63,10 @@ fa354b69c9d9ca135a97133f00bd0024 *man/state.fips.Rd
 1b19074afcafe8e0d1aa8464fbb6b0d6 *man/state.vbm.Rd
 4772854c8b17ec1604f5e099e4375c8a *man/us.cities.Rd
 ba6071e86450424b7b2ef124f177e447 *man/usa.Rd
-e67929400e7ff9c7035f24827fce590c *man/world.Rd
+f3402bdb34c9655b8e882a43a7d8fc23 *man/world.Rd
 dc4668c3b67ae20d466fdb60c07be88c *man/world.cities.Rd
 555e262690ca6cad69813337e0ace695 *man/world.legacy.Rd
-561ad7b85c6694d0a45f98f7a2a78b62 *man/world2.Rd
+487ed06dcd2e8a9425cc66459e161aac *man/world2.Rd
 eccd234607d07a4bb8470fb29acdac41 *src/Gmake.c
 4e6736aa698e81a165bbe6052ae3bf8e *src/Lmake.c
 5971ab51893c0f7b1050b1dde17ea7e3 *src/Makefile
@@ -129,4 +129,4 @@ e00687fd8b955d445553fb401bf2bf3a *src/usa.linestats
 b7364358afb7427a4aa05d7c60b67fff *src/world.gonstats
 ed19bd00182b514c7a58bbc93d09d710 *src/world.line
 dcd3e4d2e362b988705782f84022ae45 *src/world.linestats
-842425bd803daeaffda959c0dea5c5c3 *src/world.name
+7d0a96c6dffb129a8b07b25778acc4f1 *src/world.name
