@@ -43,7 +43,7 @@ It is also (during a transition phase) possible to switch to the old legacy worl
 The Natural Earth data set is available from \url{http://www.naturalearthdata.com}.
 
 The legacy CIA World Data Bank II is currently (mid-2003) available from 
-\url{http://www.evl.uic.edu/pape/data/WDB/}.
+\url{https://www.evl.uic.edu/pape/data/WDB/}.
 }
 \seealso{
 \code{\link{map}}, \code{\link{world}},\code{\link{world.legacy}}
