@@ -585,7 +585,7 @@ UK:Northern Ireland	584
 UK:Scotland:Island of Arran	585
 UK:Scotland:Islay	586
 UK:Scotland:Jura	587
-UK:7	588
+UK:Scotland:Isle of Mull	588
 UK:Scotland:Coll	589
 UK:Scotland:Barra	590
 UK:Scotland:Ruhm	591
@@ -594,11 +594,11 @@ UK:Scotland:Island of Skye	593
 UK:Scotland:North Uist	594
 UK:Scotland:Isle of Lewis	595
 UK:Great Britain	596
-UK:16	597
+UK:Scotland:Orkney Islands:South Ronaldsay	597
 UK:Scotland:Orkney Islands:Hoy	598
 UK:Scotland:Orkney Islands:Mainland	599
-UK:19	600
-UK:20	601
+UK:Scotland:Orkney Islands:Sanday	600
+UK:Scotland:Orkney Islands:Westray	601
 UK:Scotland:Shetland Islands:Mainland	602
 UK:Scotland:Shetland Islands:Yell	603
 UK:Scotland:Shetland Islands:Unst	604
